# Nimbot

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  readme.md  requirements.txt
.github/: dependabot.yml
.github/workflows/: linters.yml  test.yml
docs/: faq.md  hardware.md  index.md  protocol.md
niimprint/: __init__.py  __main__.py  printer.py
